--- a/Seccion3/43/data-volumes-01-starting-setup/data-volumes-01-starting-setup/Dockerfile
+++ b/Seccion3/43/data-volumes-01-starting-setup/data-volumes-01-starting-setup/Dockerfile
@@ -10,5 +10,9 @@ COPY . .
 
 EXPOSE 80
 
-CMD [ "node","server.js" ]
+# Se hace esto para que el node_modules quede en un volume y que no se pierda cuando nosotros ponemos la carpeta de nuestro local en un bind mount
+# asi este lo actualiza, pero como en nuestra pc no tenemos el  node_modules creado lo borra una vez que hizo el npminstall
+# VOLUME [ "/app/node_modules" ]
+
+CMD [ "npm", "start" ]
 
