MODIFY STRUCTURE OF FOLDERS

--- a/Seccion3/data-volumes-01-starting-setup/Dockerfile
+++ b/Seccion3/data-volumes-01-starting-setup/Dockerfile
@@ -8,7 +8,9 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 80
+ENV PORT 80
+
+EXPOSE $PORT
 
 # Se hace esto para que el node_modules quede en un volume y que no se pierda cuando nosotros ponemos la carpeta de nuestro local en un bind mount
 # asi este lo actualiza, pero como en nuestra pc no tenemos el  node_modules creado lo borra una vez que hizo el npminstall
